# HashJunkie

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-native.yml  build-wasm.yml  ci.yml  release.yml
crates/hashjunkie/: Cargo.toml
crates/hashjunkie-cli/: Cargo.toml
crates/hashjunkie-cli/src/: args.rs  main.rs  output.rs
crates/hashjunkie-cli/tests/: integration.rs
crates/hashjunkie-core/: Cargo.toml
crates/hashjunkie-core/src/: algorithm.rs  lib.rs  multi.rs
crates/hashjunkie-core/src/hashes/: aich.rs  blake3.rs  btv2.rs  crc32.rs  dropbox.rs  ed2k.rs  hidrive.rs  ipfs_cid.rs  mailru.rs  mod.rs  quickxor.rs  rustcrypto.rs  tiger_tree.rs  xxhash.rs
crates/hashjunkie-core/tests/: vectors.rs
crates/hashjunkie-napi/: Cargo.toml
crates/hashjunkie-napi/src/: lib.rs
crates/hashjunkie-wasm/: Cargo.toml
crates/hashjunkie-wasm/src/: lib.rs
crates/hashjunkie/examples/: hash_bytes.rs  hash_file.rs
crates/hashjunkie/src/: digest.rs  io.rs  lib.rs  result.rs
crates/hashjunkie/src/hashes/: blake3.rs  crc32.rs  ed2k.rs  hidrive.rs  mod.rs  quickxor.rs
crates/hashjunkie/tests/: library_api.rs  vectors.rs
docs/superpowers/plans/: 2026-04-12-plan1-workspace-core.md  2026-04-12-plan2-cli.md  2026-04-12-plan3-napi-wasm.md  2026-04-12-plan4-js-package.md  2026-04-13-plan5-ci-release.md  2026-04-14-cli-release-assets.md  2026-04-14-lsjson-metadata.md  2026-04-30-ipfs-cid-hash.md
docs/superpowers/specs/: 2026-04-12-hashjunkie-design.md  2026-04-14-cli-release-assets-design.md  2026-04-14-hashjunkie-lsjson-metadata-design.md  2026-04-30-ipfs-cid-hash-design.md
npm/: package.json
npm/hashjunkie/: README.md  biome.json  hashjunkie_wasm.d.ts  hashjunkie_wasm.js  index.integration.test.ts  index.test.ts  index.ts  loader.test.ts  loader.ts  package.json  tsconfig.json  types.test.ts  types.ts  wasm.test.ts  wasm.ts  wasm_blob.ts
npm/hashjunkie-darwin-arm64/: package.json
npm/hashjunkie-darwin-x64/: package.json
npm/hashjunkie-linux-arm64-gnu/: package.json
npm/hashjunkie-linux-x64-gnu/: package.json
npm/hashjunkie-win32-x64-msvc/: package.json
scripts/: build-wasm.sh  release-notes.mjs  release-notes.test.mjs  update-homebrew-formula.mjs  update-homebrew-formula.test.mjs  version-sync.mjs  version-sync.test.mjs
