[workspace]
members = [
    "crates/hashjunkie",
    "crates/hashjunkie-cli",
    "crates/hashjunkie-napi",
    "crates/hashjunkie-wasm",
]
resolver = "2"

[workspace.dependencies]
blake3       = { version = "1.8.5", features = ["rayon"] }
clap         = { version = "4.6.1", features = ["derive"] }
crc32fast    = "1.5.0"
digest       = "0.11.2"
hex          = "0.4.3"
js-sys       = "0.3.97"
md-5         = "0.11.0"
md4          = "0.11.0"
napi         = { version = "3.8.6", features = ["napi4"] }
napi-build   = "2.3.1"
napi-derive  = "3.5.5"
rayon        = "1.12.0"
serde_json   = "1.0.149"
sha1         = "0.11.0"
sha2         = "0.11.0"
tiger        = "0.3.0"
wasm-bindgen = "0.2.120"
whirlpool    = "0.11.0"
xxhash-rust  = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.wasm-release]
inherits  = "release"
opt-level = 3
lto       = true
