[package]
name    = "hashjunkie-cli"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "hashjunkie"
path = "src/main.rs"

[dependencies]
chrono          = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap            = { workspace = true }
hashjunkie-core = { path = "../hashjunkie-core" }
serde_json      = { workspace = true }
