[package]
name    = "hashjunkie-cli"
version = "0.5.2"
edition = "2024"

[[bin]]
name = "hashjunkie"
path = "src/main.rs"

[dependencies]
chrono          = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap            = { workspace = true }
hashjunkie      = { path = "../hashjunkie" }
serde_json      = { workspace = true }
