[package]
name          = "hashjunkie-cli"
version = "0.6.0"
edition       = "2024"
description   = "Command-line interface for HashJunkie multi-algorithm file hashing"
license       = "MIT"
repository    = "https://github.com/Tuxie/HashJunkie"
documentation = "https://github.com/Tuxie/HashJunkie#cli"
readme        = "../../README.md"
keywords      = ["hash", "checksum", "blake3", "ipfs", "torrent"]
categories    = ["command-line-utilities", "filesystem"]

[[bin]]
name = "hashjunkie"
path = "src/main.rs"

[dependencies]
chrono          = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap            = { workspace = true }
hashjunkie      = { version = "0.6.0", path = "../hashjunkie" }
serde_json      = { workspace = true }
