[package]
name    = "hashjunkie-core"
version = "0.3.0"
edition = "2021"

[dependencies]
blake3      = { workspace = true }
crc32fast   = { workspace = true }
digest      = { workspace = true }
hex         = { workspace = true }
md-5        = { workspace = true }
sha1        = { workspace = true }
sha2        = { workspace = true }
whirlpool   = { workspace = true }
xxhash-rust = { workspace = true }
