[package]
name    = "hashjunkie-core"
version = "0.5.2"
edition = "2024"

[features]
default = []
profile-ipfs-cid = []

[[bin]]
name              = "hashjunkie-cid-profile"
path              = "src/bin/cid_profile.rs"
required-features = ["profile-ipfs-cid"]

[dependencies]
blake3      = { workspace = true }
crc32fast   = { workspace = true }
digest      = { workspace = true }
hex         = { workspace = true }
md-5        = { workspace = true }
md4         = { workspace = true }
rayon       = { workspace = true }
sha1        = { workspace = true }
sha2        = { workspace = true }
tiger       = { workspace = true }
whirlpool   = { workspace = true }
xxhash-rust = { workspace = true }
