[package]
name = "hashjunkie-napi"
version = "0.3.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hashjunkie-core = { path = "../hashjunkie-core" }
napi            = { workspace = true }
napi-derive     = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
