[package]
name = "hashjunkie-napi"
version = "0.5.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hashjunkie-core = { path = "../hashjunkie-core" }
blake3          = { workspace = true, features = ["mmap"] }
napi            = { workspace = true }
napi-derive     = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
