[package]
name = "hashjunkie-napi"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hashjunkie      = { path = "../hashjunkie" }
blake3          = { workspace = true, features = ["mmap"] }
napi            = { workspace = true }
napi-derive     = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
